logs/pywebdav.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyWebDAV-0.9.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pywebdav'...
Listing './lib/python3.5/site-packages/pywebdav/lib'...
Compiling './lib/python3.5/site-packages/pywebdav/lib/INI_Parse.py'...
***   File "./lib/python3.5/site-packages/pywebdav/lib/INI_Parse.py", line 58
    print c.Origem.host, c.Origem.port
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pywebdav/lib/WebDAVServer.py'...
***   File "./lib/python3.5/site-packages/pywebdav/lib/WebDAVServer.py", line 246
    except DAV_Error, (ec, dd):
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywebdav/lib/davcmd.py'...
***   File "./lib/python3.5/site-packages/pywebdav/lib/davcmd.py", line 64
    except DAV_Error, (ec,dd):
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywebdav/lib/davcopy.py'...
***   File "./lib/python3.5/site-packages/pywebdav/lib/davcopy.py", line 46
    if dc.exists(self.__dst) and not self.__overwrite: raise DAV_Error, 412
                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywebdav/lib/davmove.py'...
***   File "./lib/python3.5/site-packages/pywebdav/lib/davmove.py", line 46
    if dc.exists(self.__dst) and not self.__overwrite: raise DAV_Error, 412
                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywebdav/lib/dbconn.py'...
***   File "./lib/python3.5/site-packages/pywebdav/lib/dbconn.py", line 16
    except MySQLdb.OperationalError, message:
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywebdav/lib/propfind.py'...
***   File "./lib/python3.5/site-packages/pywebdav/lib/propfind.py", line 344
    except DAV_Error, error_code:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pywebdav/server'...
Compiling './lib/python3.5/site-packages/pywebdav/server/daemonize.py'...
***   File "./lib/python3.5/site-packages/pywebdav/server/daemonize.py", line 63
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywebdav/server/fshandler.py'...
***   File "./lib/python3.5/site-packages/pywebdav/server/fshandler.py", line 80
    raise Exception, '%s not must be a directory!' % path
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywebdav/server/server.py'...
***   File "./lib/python3.5/site-packages/pywebdav/server/server.py", line 22
    print 'pywebdav.lib package not found! Please install into site-packages or set PYTHONPATH!'
                                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
